# jt-ipam

./: .dockerignore  .env.docker.example  .gitignore  CHANGELOG.md  CHANGELOG_zh-TW.md  README.md  README_zh-TW.md  SECURITY.md  SECURITY_zh-TW.md  TEST_CHECKLIST.md  TEST_CHECKLIST_zh-TW.md  docker-compose.yml
.github/workflows/: ci.yml  images.yml
.opencode/skills/: merge-upstream.md
agent/: jt-ipam-agent-installer.sh  jt-ipam-cert-agent-installer.sh  jt_ipam_agent.py  jt_ipam_cert_agent.py  jt_ipam_cert_agent.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 0060_dhcp_pool_ranges.py  0062_device_rack_side.py  0077_cert_agent_recent_sources.py  0081_ip_ssh_and_user_capability.py  0082_ssh_credentials.py  0083_ip_rdp_cred_protocol.py  0084_ip_vnc_enabled.py  0085_vm_unique_by_vmid.py  0086_scan_agent_tools.py  0087_pfsense_firewall.py  0088_pfsense_rules_dsv.py  0089_ip_novnc_enabled.py  0090_ip_is_dhcp_server.py  0091_librenms_auto_add_default.py  0092_ip_bmc_enabled.py
backend/app/: main.py  version.py
backend/app/api/phpipam/: helpers.py
backend/app/api/phpipam/endpoints/: addresses.py  sections.py  subnets.py  user.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: addresses.py  advanced.py  ai.py  audit.py  auth.py  background_tasks.py  bmc_console.py  cert_agents.py  certificates.py  dashboard.py  devices.py  dns.py  firewall.py  graylog_dsv.py  health.py  import_external.py  ip_requests.py  ldap_admin.py  librenms.py  locations.py  migration.py  nat.py  notifications.py  novnc_console.py  oui.py  pfsense.py  physical.py  rack_diagram.py  rdp_console.py  scan.py  scan_agents.py  ssh_console.py  ssh_credentials.py  sso.py  subnets.py  system_logs.py  system_settings.py  tools.py  users.py  virt.py  (+3 more)
backend/app/core/: audit.py  config.py  db.py  middleware.py  security.py
backend/app/mcp/: server.py  tools.py
backend/app/models/: __init__.py  address.py  adguard.py  advanced.py  background_task.py  certificate.py  device.py  dhcp.py  ip_hostname.py  librenms.py  pfsense.py  physical.py  scan_agent.py  ssh_credential.py  subnet.py  user.py  virt.py  wazuh.py
backend/app/plugins/: registry.py
backend/app/schemas/: address.py  api_token.py  auth.py  certificate.py  device.py  ip_request.py  location.py  subnet.py  user.py
backend/app/services/: adguard.py  ai.py  anomaly.py  arp_precedence.py  auth.py  background_tasks.py  bmc.py  cert_alert.py  csv_io.py  custom_field.py  dns_sync.py  email.py  geoip.py  hostname.py  ip_request.py  ldap_auth.py  librenms.py  notification.py  oidc.py  opnsense_firewall.py  os_precedence.py  oui.py  permission.py  pfsense.py  phpipam_migration.py  proxmox.py  pve_console.py  rack.py  radius_auth.py  ripe_twnic.py  saml.py  search.py  ssh_tunnel.py  subnet.py  system_config.py  topology.py  totp.py  wazuh.py
backend/app/services/dns/: factory.py  ucs.py  unbound_opnsense.py  windows_dns.py
backend/scripts/: docker-entrypoint.sh
backend/tests/: test_address_relations.py  test_ai_chat_tools.py  test_ai_inline_toolcalls.py  test_cert_agent_script.py  test_cert_agents_api.py  test_certificates_api.py  test_csv_import_spawn_label.py  test_dhcp_ranges.py  test_inet_schema_coercion.py  test_librenms_infer_type.py  test_map_provider.py  test_mcp_transport.py  test_opnsense_alias_parse.py  test_proxmox_sync.py  test_rack_placement.py  test_rdp_console.py  test_scan_auto_add.py  test_ssh_console.py  test_vnc_console.py
deploy/: README.md  README_zh-TW.md  zap-baseline.conf
deploy/docker/: .env.example  Dockerfile  README.md  README_zh-TW.md  docker-compose.yml  entrypoint-backend.sh  entrypoint-web.sh  gen-env.sh  nginx.conf  offline-export.sh  offline-import.sh  update.sh
deploy/nginx/: jt-ipam-docker.conf  jt-ipam-external-proxy-snippet.conf  jt-ipam-external-proxy.conf  jt-ipam-proxy.conf  jt-ipam.conf
deploy/postgres/: init-docker.sh
docs/: DATA_MODEL.md  DATA_MODEL_zh-TW.md  INSTALL.md  INSTALL_zh-TW.md  OFFLINE_DOCKER.md  OFFLINE_DOCKER_zh-TW.md  PHPIPAM_API_MAPPING.md  PHPIPAM_API_MAPPING_zh-TW.md  PLUGINS.md  PLUGINS_zh-TW.md  SECURITY.md  SPEC.md  features.html  index.html
docs/knowledge/architecture/: docker-compose-deployment.md
docs/knowledge/patterns/: docker-compose-service-addition.md  offline-upgrade.md
docs/knowledge/troubleshooting/: pydantic-settings-raise-bug.md
frontend/: Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml
frontend/src/: App.vue  icons.ts  novnc.d.ts
frontend/src/api/: addresses.ts  admin.ts  basic.ts  bmc.ts  certificates.ts  client.ts  dashboard.ts  integrations.ts  ip_history.ts  ip_requests.ts  notify_channels.ts  novnc.ts  pfsense.ts  phase3.ts  racks.ts  rdp.ts  relations.ts  ssh.ts  system.ts  vnc.ts
frontend/src/assets/: world-land.ts
frontend/src/components/: BmcScreen.vue  ChangePasswordModal.vue  ChatWidget.vue  ConsoleDisconnectedOverlay.vue  DeviceEditModal.vue  DevicePortsPanel.vue  ExportButton.vue  GlobalSearch.vue  IPAddressEditModal.vue  IpRoleTags.vue  LocationsMap.vue  NoVncScreen.vue  NotificationBell.vue  OsCell.vue  RackDiagram.vue  RackFloorPlan.vue  RdpScreen.vue  RelationChain.vue  SessionGuard.vue  SshTerminal.vue  SubnetEditModal.vue  SubnetGrid.vue  VncScreen.vue
frontend/src/composables/: useChangeLogDim.ts  useColumnPrefs.ts  useEntityLinks.ts  usePinned.ts  useSendKeys.ts  useSubnetTree.ts  useTablePagination.ts  useTableQuickFilter.ts
frontend/src/i18n/: en-US.json  zh-TW.json
frontend/src/router/: index.ts
frontend/src/stores/: ui.ts
frontend/src/types/: index.ts
frontend/src/utils/: session.ts
frontend/src/views/: AdGuardAdmin.vue  Addresses.vue  Anomaly.vue  Audit.vue  BmcConsole.vue  CertStatus.vue  Certificates.vue  ChatHistoryAdmin.vue  Connections.vue  CustomFields.vue  DNSAdmin.vue  Dashboard.vue  Devices.vue  (+39 more)
scripts/: bootstrap.sh  build-docker-package.sh  ci.sh  dev.sh  docker-backup.sh  docker-restore.sh  generate-self-signed-cert.sh  install-debian.sh  jt-ipam-backup.sh  jt-ipam-sync.py  jt-ipam-upgrade.sh  jt-ipam.sh  run-backend.sh  smoke-test.sh  sync-upstream.sh
(+2 files in other folders)
